# rustybin

./: .env.example  .gitignore  API_ENCRYPTION.md  Cargo.toml  LICENSE  README.md
examples/: README.md  create-paste.js  create-paste.py
site/: .env.example  .gitignore  DEPLOYMENT.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.ts  vitest.config.ts
site/.cloudflare/: pages.json
site/public/: _headers
site/src/: App.tsx  index.css
site/src/components/admin/: AdminAuthGuard.tsx  DeleteDialog.tsx  LanguageBreakdown.tsx  PasteFilters.tsx  PasteTable.tsx  StatsCards.tsx  TimeSeriesChart.tsx
site/src/components/layout/: Layout.tsx
site/src/components/paste/: ApiEncryption.tsx  Changelog.tsx  MarkdownToolbar.tsx  MarkdownViewer.tsx  PasteTextArea.tsx  Privacy.tsx  SecurityInfo.tsx  Terms.tsx  markdown-styles.css
site/src/components/ui/: badge.tsx  button.tsx  dialog.tsx  prism-theme-toggle.tsx  select.tsx  sidebar.tsx  sonner.tsx  switch.tsx  (+3 more)
site/src/lib/: admin.ts  debounce.ts  enc.ts  file-drop.ts  language-detector.ts  markdown-plugins.d.ts  markdown-toolbar.ts  markdown.test.ts  markdown.ts  paste.ts  types.ts  use-theme.ts  workspace-types.ts  workspace.ts
site/src/pages/: AdminDashboard.tsx  AdminLogin.tsx  Index.tsx  Workspace.tsx
site/src/styles/: prism-overrides.css
site/src/utils/: language-utils.ts  prism-theme-utils.ts  prism-utils.ts
src/: auth.rs  db.rs  error.rs  health.rs  main.rs
src/handlers/: admin.rs  mod.rs  paste.rs  workspace.rs
src/models/: admin.rs  mod.rs  workspace.rs
(+4 files in other folders)
