[package]
name = "rustybin"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.1", features = ["json"] }
tokio = { version = "1.36.0", features = ["full"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tower-http = { version = "0.5.2", features = ["cors", "fs", "trace"] }
uuid = { version = "1.7.0", features = ["v4", "serde"] }
chrono = { version = "0.4.35", features = ["serde"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
dotenv = "0.15.0"
hyper = { version = "1.2.0", features = ["server"] }
sqlite = "0.33.0"
aes-gcm = "0.10.3"
pbkdf2 = "0.12.2"
rand = "0.8.5"
base64 = "0.21.7"
sha2 = "0.10.8"
thiserror = "1.0.57"
governor = "0.6.0"
